--- a/node-girls/katas/api-node-imdb/package.json
+++ b/node-girls/katas/api-node-imdb/package.json
@@ -4,7 +4,7 @@
   "description": "An API for a movie database",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
   },
   "author": "",
   "license": "ISC",
