--- a/node-girls/katas/api-node-imdb/package.json
+++ b/node-girls/katas/api-node-imdb/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^23.6.0"
+  },
+  "dependencies": {
+    "mongodb": "^3.1.8",
+    "mongoose": "^5.3.6"
   }
 }
