--- a/node-girls/katas/api-node-imdb/package.json
+++ b/node-girls/katas/api-node-imdb/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "supertest": "^3.3.0"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.6"
   }
